<resources>
    <string name="app_name">My ApplicationXML</string>
    <string name="animal">Животное</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="bird">Птица</string>
    <string name="skip">Skip</string>
    <string name="congrat">Хорошая работа, молодец</string>
    <string name="next">next</string>
    <string name="shark">Акула</string>
    <string name="_2">2</string>
    <string name="JIococb">Лосось</string>
    <string name="fish">Fish</string>
    <string name="fish_button">Fish button</string>
    <string name="close_app_button">close app button</string>
    <string name="_1">1</string>
</resources>