<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageButton
        android:id="@+id/btExit"
        android:layout_width="211dp"
        android:layout_height="117dp"
        android:contentDescription="@string/close_app_button"
        android:src="@drawable/exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fishLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionWord"
        tools:visibility="visible">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/fishSpinGif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fish_spin" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/JoelCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/joelcorrect"

            android:visibility="gone"
            tools:visibility="gone" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/mistake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mistake"

            android:visibility="gone"
            tools:visibility="gone" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/SkellyLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionWord">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/skellyGif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/skelly"
            android:visibility="gone"
            tools:visibility="gone" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/skellyCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/skellysmoke"
            android:visibility="gone"
            tools:visibility="gone" />
    </FrameLayout>


    <!--    <ImageButton-->
    <!--        -->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:layout_marginTop="53dp"-->
    <!--        android:background="@android:color/transparent"-->
    <!--        android:src="@drawable/fish1"-->
    <!--        -->
    <!--        android:contentDescription="@string/fish_button" />-->

    <TextView
        android:id="@+id/tvQuestionWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/tf2build"
        android:text="@string/fish"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btExit"
        tools:text="Fish" />

    <LinearLayout
        android:id="@+id/layoutAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fishLayout">

        <LinearLayout
            android:id="@+id/layoutAnswer1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNumber1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="@string/_1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvValue1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/tf2build"
                android:text="Рыба" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAnswer2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNumber2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="@string/_2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvValue2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/tf2build"
                android:text="@string/shark" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAnswer3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNumber3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="@string/_3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvValue3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/tf2build"
                android:text="@string/animal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAnswer4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNumber4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="@string/_4"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvValue4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/tf2build"
                android:text="@string/bird" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btSkip"
        android:layout_width="310dp"
        android:layout_height="58dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#002CFF"
        android:text="@string/skip"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="#389A22"
        android:visibility="gone"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_height="150dp"
        tools:visibility="gone">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tf2build"
            android:gravity="center_horizontal"
            android:textColor="#EEEEEE"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/btNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btNext"
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/tf2build"
            android:text="@string/next"
            android:textColor="#389922"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>